# VectorDB-Benchmarking

./: .gitignore  CLAUDE.md  CUSTOM_HNSW_PLAN.md  PROJECT_PLAN.md  README.md  error.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: default.yaml
docs/: CODEBASE.md  myhnsw_explanation.md
native/hnsw/: CMakeLists.txt
native/hnsw/include/hnsw/: distances_scalar.hpp  distances_simd.hpp  hnsw_index.hpp  visited_pool.hpp
native/hnsw/src/: bindings.cpp
native/hnsw/tests/: test_distances.cpp  test_hnsw.cpp
results/: results.db
scripts/: download_dataset.py
so_files/: swigfaiss.py
src/vdbbench/: config.py
src/vdbbench/backends/: base.py  faiss_backend.py  hnsw_fast_backend.py  hnsw_scalar_backend.py
src/vdbbench/core/: metrics.py  types.py
src/vdbbench/datasets/: base.py  hdf5_ann.py
src/vdbbench/groundtruth/: base.py  precomputed.py
src/vdbbench/harness/: runner.py  warmup.py
src/vdbbench/storage/: schema.py  store.py
