[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "vdbbench"
version = "0.1.0"
description = "CPU-only, single-query benchmarking harness for vector databases"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "h5py",
    "faiss-cpu",
    "psutil",
    "pydantic>=2",
    "pyyaml",
    "pandas",
    "pyarrow",
    "tqdm",
    "requests",
    "ninja",
    "pybind11>=2.12",
    "cmake>=3.21",
    "scikit-build-core>=0.10",
]

[project.optional-dependencies]
qdrant = ["qdrant-client"]
pgvector = ["psycopg[binary]", "pgvector"]
milvus = ["pymilvus"]
viz = ["matplotlib"]

[project.scripts]
vdbbench-run = "vdbbench.harness.runner:main"

[tool.scikit-build]
cmake.source-dir = "native/hnsw"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/vdbbench"]

[tool.scikit-build.editable]
rebuild = true

[tool.uv]
no-build-isolation-package = ["vdbbench"]
